deploy: 9f3f6274cf9d404d19d871581ad75887858f1583

--- a/en/contents/generalities/03-distance.html
+++ b/en/contents/generalities/03-distance.html
@@ -85,7 +85,6 @@ window.Quarto = {
   typesetMath
 };
 </script><meta property="og:title" content="Distance – STT-2200: Data Analysis">
-<meta property="og:description" content="Website for STT-2200">
 <meta property="og:site_name" content="STT-2200: Data Analysis">
 </head>
 <body class="nav-sidebar floating quarto-light">
@@ -620,11 +619,7 @@ window.Quarto = {
   
 
 
-</header><p>Test</p>
-
-
-
-</main><!-- /main --><script>
+</header></main><!-- /main --><script>
 
 /* update total correct if #webex-total_correct exists */
 update_total_correct = function() {
